[package]
name = "keybd_sleep"
version = "2.0.0"
edition = "2024"
build = "build.rs"
description = "KeybdSleep"
license = "MIT"

[[bin]]
name = "KeybdSleep"
path = "src/main.rs"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[build-dependencies]
winres = "0.1"
